인증 추가 처리
